--- a/mission.html
+++ b/mission.html
@@ -14,7 +14,7 @@
         <div class="nav">
 
           <button class="button" id="home"><a href="index.html" style="text-decoration: none; color: white">Home</a></button>
-          <button class="button" id="mission"><a href="about.html" style="text-decoration: none; color: white">Mission</a></button>
+          <button class="button" id="mission"><a href="mission.html" style="text-decoration: none; color: white">Mission</a></button>
           <button class="button" id="info"><a href="info.html" style="text-decoration: none; color: white">Info</a></button>
           <button class="button" id="map"><a href="map.html" style="text-decoration: none; color: white">Map</a></button>
           <button class="button" id="shop"><a href="shop.html" style="text-decoration: none; color: white">Shop</a></button>
@@ -28,9 +28,12 @@
     </div>
 
     <div id="slogan">
-      <h1>
+      <h1 id = "title">
         Mission.
       </h1>
+      <b id="statement">
+        We are four students from different universities who want to keep the public informed about COVID-19, how it spreads, and its prevention. <br>We hope this website can make the Coronavirus a more accessible topic so that individuals can stay informed and safe.</br>
+      </b>
     </div>
 
     <div class="fcfooter">
