--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
       <div class="fcbuttons">
 
           <button class="button" id="home"><a href="index.html" style="text-decoration: none; color: white">Home</a></button>
-          <button class="button" id="mission"><a href="about.html" style="text-decoration: none; color: white">Mission</a></button>
+          <button class="button" id="mission"><a href="mission.html" style="text-decoration: none; color: white">Mission</a></button>
           <button class="button" id="info"><a href="info.html" style="text-decoration: none; color: white">Info</a></button>
           <button class="button" id="map"><a href="map.html" style="text-decoration: none; color: white">Map</a></button>
           <button class="button" id="shop"><a href="shop.html" style="text-decoration: none; color: white">Shop</a></button>
