changed backgorund color

--- a/info.html
+++ b/info.html
@@ -25,12 +25,38 @@
 
       </div>
 
-    </div>
-
-    <div id="slogan">
-      <h1>
+      <h1 id = "title">
         Info
       </h1>
+
+
+    </div>
+
+    <div id="prevention">
+
+      <h2>Prevention</h2>
+
+      There is currently no vaccine to prevent coronavirus disease 2019 (COVID-19). The best way to prevent illness is to avoid being exposed to this virus. However, as a reminder, CDC always recommends everyday preventive actions to help prevent the spread of respiratory diseases, including:
+
+<b>
+      <br> Avoid close contact with people who are sick.
+
+        <br> Avoid touching your eyes, nose, and mouth.
+
+      <br>   Stay home when you are sick.
+
+      <br>  Cover your cough or sneeze with a tissue, then throw the tissue in the trash.
+
+      <br>  Clean and disinfect frequently touched objects and surfaces using a regular household cleaning spray or wipe.
+
+      <br>  Follow CDC’s recommendations for using a facemask.
+
+      <br>  CDC does not recommend that people who are well wear a facemask to protect themselves from respiratory diseases, including COVID-19.
+
+      <br>  Facemasks should be used by people who show symptoms of COVID-19 to help prevent the spread of the disease to  others. The use of facemasks is also crucial for health workers and people who are taking care of someone in close settings (at home or in a health care facility).
+      Wash your hands often with soap and water for at least 20 seconds, especially after going to the bathroom; before eating; and after blowing your nose, coughing, or sneezing.
+      If soap and water are not readily available, use an alcohol-based hand sanitizer with at least 60% alcohol. Always wash hands with soap and water if hands are visibly dirty.
+      </b>
     </div>
 
     <div class="fcfooter">
