--- a/map.html
+++ b/map.html
@@ -25,12 +25,15 @@
 
       </div>
 
+      <h1 id = "title">
+        Map
+      </h1>
+
+
     </div>
 
     <div id="slogan">
-      <h1>
-        Map
-      </h1>
+
     </div>
 
     <div class="fcfooter">
