--- a/mission.html
+++ b/mission.html
@@ -25,12 +25,13 @@
 
       </div>
 
+      <h1 id = "title">
+        Mission
+      </h1>
+
     </div>
 
     <div id="slogan">
-      <h1 id = "title">
-        Mission.
-      </h1>
       <b id="statement">
         We are four students from different universities who want to keep the public informed about COVID-19, how it spreads, and its prevention. <br>We hope this website can make the Coronavirus a more accessible topic so that individuals can stay informed and safe.</br>
       </b>
