--- a/faq.html
+++ b/faq.html
@@ -20,15 +20,18 @@
           <button class="button" id="faq"><a href="faq.html" style="text-decoration: none; color: white">FAQs</a></button>
 
         </div>
+        <h1 id = "title">
+          FAQ
+        </h1>
 
       </div>
+
+
 
     </div>
 
     <div id="slogan">
-      <h1>
-      FAQs
-      </h1>
+
     </div>
 
     <div class="fcfooter">
