--- a/forum.html
+++ b/forum.html
@@ -24,13 +24,15 @@
         </div>
 
       </div>
+      <h1 id = "title">
+        Forum
+      </h1>
+
 
     </div>
 
     <div id="slogan">
-      <h1>
-        Forum
-      </h1>
+
     </div>
 
     <div class="fcfooter">
