--- a/shop.html
+++ b/shop.html
@@ -24,13 +24,15 @@
         </div>
 
       </div>
+      <h1 id = "title">
+        Shop
+      </h1>
+
 
     </div>
 
     <div id="slogan">
-      <h1>
-        Shop
-      </h1>
+
     </div>
 
     <div class="fcfooter">
