Changed forum.css and forum.html. Added forum.js

--- a/forum.html
+++ b/forum.html
@@ -3,6 +3,7 @@
 <head>
 <title>Homepage</title>
 <link rel="stylesheet" type="text/css" href="forum.css">
+<script src="forum.js"></script>
 </head>
 <body>
   <div class="fcpage">
@@ -32,8 +33,12 @@
     </div>
 
     <div id="slogan">
-
+      <h1>
+        Discussion regarding COVID-19
+      </h1>
     </div>
+
+    <button id="new" onclick= "buttonClicked()">New Comment or Question</button>
 
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
