made a new page to make new post

--- a/forum.html
+++ b/forum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Homepage</title>
+<title>Forum</title>
 <link rel="stylesheet" type="text/css" href="forum.css">
 <script src="forum.js"></script>
 </head>
@@ -26,19 +26,17 @@
 
       </div>
       <h1 id = "title">
-        Forum
-      </h1>
-
-
-    </div>
-
-    <div id="slogan">
-      <h1>
         Discussion regarding COVID-19
       </h1>
+      <div>       
+        <button id="new"><a href="forum2.html">New Comment or Question</a></button>
+      </div>
+
     </div>
 
-    <button id="new" onclick= "buttonClicked()">New Comment or Question</button>
+    
+
+    
 
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
