--- a/shop.html
+++ b/shop.html
@@ -22,19 +22,43 @@
           <button class="button" id="faq"><a href="faq.html" style="text-decoration: none; color: white">FAQs</a></button>
 
         </div>
-
       </div>
       <h1 id = "title">
-        Shop
+        Shops
+      <h1 id = "slogan">
+        Protect yourself from Coronavirus
       </h1>
-
-
+    </div>
+    <div class = "picture1">
+      <a href="https://www.amazon.com/Antiseptic-Sanitizing-Individually-Antibacterial-Protection/dp/B07NFBC8LJ/ref=sr_1_1?crid=21WNRALU6CEBD&keywords=sanitizer+alcohol&qid=1583623753&sprefix=sanitizer+al%2Caps%2C183&sr=8-1">
+      <img src = "Brandzig Sterile Alcohol Prep Pads (300-Pack)  Thick 2-Ply AntisepticSanitizing Isopropyl Medical Wipes.png" height="300" width="400" vspace="20"></a>
+      <div class="overlay">Brandzig Sterile Alcohol Prep Pads (300-Pack)  Thick 2-Ply AntisepticSanitizing Isopropyl Medical Wipes</div>
+    </div>
+    <div class = "picture2">  
+      <a href="https://www.amazon.com/FaceMasks-Protective-Dustproof-Pollen-Outdoor/dp/B084CT7FD4/ref=sr_1_13?crid=108TH6ZU6PKBP&keywords=n95+mask&qid=1583623284&sprefix=n95%2Caps%2C204&sr=8-13">
+      <img src = "FaceMasks 50Pcs.png" height="300" width="400" vspace="20"></a>
+      <div class="overlay">FaceMasks (50-Pack)</div>
+    </div>
+    <div class = "picture3">
+      <a href="https://www.amazon.com/MedPride-Powder-Free-Nitrile-Gloves-Medium/dp/B00GS8W3T4/ref=sxin_0_osp137-052a41b9_cov?ascsubtag=052a41b9-ac8e-46e2-8bf2-a08d0f10887e&creativeASIN=B00GS8W3T4&cv_ct_cx=medical+gloves&cv_ct_id=amzn1.osp.052a41b9-ac8e-46e2-8bf2-a08d0f10887e&cv_ct_pg=search&cv_ct_wn=osp-search&keywords=medical+gloves&linkCode=oas&pd_rd_i=B00GS8W3T4&pd_rd_r=5c4dc216-5abf-436a-8427-8b0ac0d9a1a5&pd_rd_w=XmGEj&pd_rd_wg=ctWOn&pf_rd_p=eb3e5cda-5ec9-4d94-919d-310a5d641b8b&pf_rd_r=XG9REPT8T6FFHV2Y31PP&qid=1583623716&tag=the-angle-20">
+      <img src = "MedPride Powder-Free Nitrile Exam Gloves.png" height="300" width="400" vspace="20"></a>
+      <div class="overlay">MedPride Powder-Free Nitrile Exam Gloves</div>
+    </div>
+    <div class = "picture4">
+      <a href="https://www.amazon.com/ProWorks-Particulate-Respirator-Metal-Nosepiece/dp/B0855S5FGZ/ref=sr_1_14?crid=108TH6ZU6PKBP&keywords=n95+mask&qid=1583623284&sprefix=n95%2Caps%2C204&sr=8-14">
+      <img src = "ProWorks N95 Particulate Respirator wMetal Nosepiece 20Box.png" height="300" width="400" vspace="20"></a>
+      <div class="overlay">ProWorks N95 Particulate Respirator wMetal Nosepiece 20Box</div>
+    </div>
+    <div class = "picture5">
+      <a href="https://www.amazon.com/Amazon-Brand-Advanced-Sanitizer-Original/dp/B07NFSZ9XN/ref=sr_1_2?almBrandId=QW1hem9uIEZyZXNo&crid=21WNRALU6CEBD&fpw=alm&keywords=sanitizer+alcohol&qid=1583623753&sprefix=sanitizer+al%2Caps%2C183&sr=8-2">
+      <img src = "Solimo Advanced Hand Sanitizer.png" height="400" width="400" vspace="20">
+      <div class="overlay">Solimo Advanced Hand Sanitizer</div></a>
     </div>
 
     <div id="slogan">
-
+    
     </div>
-
+    
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
         Website created for AthenaHacks2020.
