--- a/faq.html
+++ b/faq.html
@@ -24,18 +24,58 @@
           FAQ
         </h1>
 
+
       </div>
 
 
 
     </div>
 
-    <div id="slogan">
+    <div class="whatsCOVID">
+      <span>What is COVID-19?</span>
+        <div class="whatsCOVID-content">COVID-19 is the infectious disease caused by the most recently discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019.</div>
+    </div>
 
+    <div class="COVIDsym">
+      <span>What are symptoms of COVID-19?</span>
+        <div class="COVIDsym-content">The most common symptoms of COVID-19 are fever, tiredness, and dry cough. Some patients may have aches and pains, nasal congestion, runny nose, sore throat or diarrhea. These symptoms are usually mild and begin gradually. Some people become infected but don’t develop any symptoms and don't feel unwell. Most people (about 80%) recover from the disease without needing special treatment. Around 1 out of every 6 people who gets COVID-19 becomes seriously ill and develops difficulty breathing. Older people, and those with underlying medical problems like high blood pressure, heart problems or diabetes, are more likely to develop serious illness. People with fever, cough and difficulty breathing should seek medical attention.</div>
+    </div>
+
+    <div class="spread">
+      <span>How does the virus spread?</span>
+        <div class="spread-content">People can catch COVID-19 from others who have the virus. The disease can spread from person to person through small droplets from the nose or mouth which are spread when a person with COVID-19 coughs or exhales. These droplets land on objects and surfaces around the person. Other people then catch COVID-19 by touching these objects or surfaces, then touching their eyes, nose or mouth. People can also catch COVID-19 if they breathe in droplets from a person with COVID-19 who coughs out or exhales droplets. This is why it is important to stay more than 1 meter (3 feet) away from a person who is sick.</div>
+    </div>
+
+    <div class="vac">
+      <span>Is there a vaccine?</span>
+        <div class="vac-content">Not yet. To date, there is no vaccine and no specific antiviral medicine to prevent or treat COVID-2019. However, those affected should receive care to relieve symptoms. People with serious illness should be hospitalized. Most patients recover thanks to supportive care.
+
+Possible vaccines and some specific drug treatments are under investigation. They are being tested through clinical trials. WHO is coordinating efforts to develop vaccines and medicines to prevent and treat COVID-19.
+
+The most effective ways to protect yourself and others against COVID-19 are to frequently clean your hands, cover your cough with the bend of elbow or tissue, and maintain a distance of at least 1 meter (3 feet) from people who are coughing or sneezing.</div>
+    </div>
+
+    <div class="mask">
+      <span>Should I wear a mask?</span>
+        <div class="mask-content">Only wear a mask if you are ill with COVID-19 symptoms (especially coughing) or looking after someone who may have COVID-19. Disposable face mask can only be used once. If you are not ill or looking after someone who is ill then you are wasting a mask.</div>
+    </div>
+
+    <div class="pet">
+      <span>Can I catch the virus from my pet?</span>
+        <div class="pet-content">No, there's no evidence that pets can catch or spread the virus.</div>
+    </div>
+
+    <div class="no">
+      <span>Is there anything I SHOULDN'T do?</span>
+        <div class="no-content">
+Smoke, wear multiple masks, and self medicate, such as taking antibiotics.
+          </div>
     </div>
 
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
+        All info gathered from the World Health Organization.
+      <br>
         Website created for AthenaHacks2020.
       </p>
     </div>
