--- a/forum.html
+++ b/forum.html
@@ -4,6 +4,9 @@
 <title>Forum</title>
 <link rel="stylesheet" type="text/css" href="forum.css">
 <script src="forum.js"></script>
+<script src="data.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-firestore.js"></script>
 </head>
 <body>
   <div class="fcpage">
@@ -29,7 +32,7 @@
         Discussion regarding COVID-19
       </h1>
       <div>       
-        <button id="new"><a href="forum2.html">New Comment or Question</a></button>
+        <button id="new"><a href="forum2.html" style="text-decoration: none; color: white">New Comment or Question</a></button>
       </div>
 
     </div>
@@ -44,6 +47,17 @@
       </p>
     </div>
   </div>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/7.10.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/7.10.0/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
+
 
 
 </body>
