fixed css for forum

--- a/forum.html
+++ b/forum.html
@@ -30,16 +30,18 @@
       </div>
       <h1 id = "title">
         Discussion regarding COVID-19
-      </h1>
-      <div>       
+        <br>
         <button id="new"><a href="forum2.html" style="text-decoration: none; color: white">New Comment or Question</a></button>
+      </h1>
+      <div>
+        <!-- <button id="new"><a href="forum2.html" style="text-decoration: none; color: white">New Comment or Question</a></button> -->
       </div>
 
     </div>
 
-    
 
-    
+
+
 
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
