--- a/map.html
+++ b/map.html
@@ -25,16 +25,15 @@
 
       </div>
 
-      <h1 id = "title">
+      <!-- <h1 id = "title">
         Map
-      </h1>
+      </h1> -->
 
 
-    </div>
-
-    <div id="slogan">
 
     </div>
+
+    <iframe id = "jhmap" src ="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6"></iframe>
 
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
