--- a/map.html
+++ b/map.html
@@ -37,7 +37,7 @@
 
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
-        Website created for AthenaHacks2020.
+        Map by Johns Hopkins University. Website created for AthenaHacks2020.
       </p>
     </div>
   </div>
