added forum hahahahahah

--- a/forum.html
+++ b/forum.html
@@ -28,10 +28,8 @@
         </div>
 
       </div>
-      <h1 id = "title">
-        Discussion regarding COVID-19
-        <br>
-        <button id="new"><a href="forum2.html" style="text-decoration: none; color: white">New Comment or Question</a></button>
+
+  <iframe id="forumphp" src="https://covid19forum.forumotion.com/"></iframe>
       </h1>
       <div>
         <!-- <button id="new"><a href="forum2.html" style="text-decoration: none; color: white">New Comment or Question</a></button> -->
