--- a/info.html
+++ b/info.html
@@ -25,13 +25,12 @@
 
       </div>
 
-      <h1 id = "title">
-        Info
-      </h1>
-
 
     </div>
-
+    <div class = "picture">
+      <img src = "coronavirus hero.jpg" height="300" width="1300">
+      <div class="centered">Info</div>
+    </div>
     <div id="prevention">
 
       <h2>Prevention</h2>
