--- a/mission.html
+++ b/mission.html
@@ -27,6 +27,9 @@
 
       <h1 id = "title">
         Mission
+      <div id="prevention">
+        <img src="https://img.icons8.com/wired/64/000000/faq.png">
+        <h2>FAQ</h2>
       </h1>
 
     </div>
