--- a/shop.html
+++ b/shop.html
@@ -23,8 +23,10 @@
 
         </div>
       </div>
-      <h1 id = "title">
-        Shops
+      <div class = "picture">
+        <img src = "coronavirus hero.jpg" height="300" width="1300">
+        <div class="centered">Shops</div>
+      </div>
       <h1 id = "slogan">
         Protect yourself from Coronavirus
       </h1>
