--- a/faq.html
+++ b/faq.html
@@ -20,9 +20,9 @@
           <button class="button" id="faq"><a href="faq.html" style="text-decoration: none; color: white">FAQs</a></button>
 
         </div>
-        <h1 id = "title">
-          FAQ
-        </h1>
+        <div id="prevention">
+            <img src="https://img.icons8.com/wired/64/000000/faq.png">
+            <h2>FAQ</h2>
 
 
       </div>
@@ -30,7 +30,12 @@
 
 
     </div>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="whatsCOVID">
       <span>What is COVID-19?</span>
         <div class="whatsCOVID-content">COVID-19 is the infectious disease caused by the most recently discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019.</div>
