--- a/faq.html
+++ b/faq.html
@@ -20,21 +20,23 @@
           <button class="button" id="faq"><a href="faq.html" style="text-decoration: none; color: white">FAQs</a></button>
 
         </div>
-        <div id="prevention">
-            <img src="https://img.icons8.com/wired/64/000000/faq.png">
-            <h2>FAQ</h2>
-
+       
 
       </div>
+      <div class = "picture">
+        <img src = "coronavirus hero.jpg" height="300" width="1300">
+        <div class="centered">FAQs</div>
+      </div>
+      <div id="prevention">
+          <img src="https://img.icons8.com/wired/64/000000/faq.png">
+
 
 
 
     </div>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  
+    
     <br>
     <div class="whatsCOVID">
       <span>What is COVID-19?</span>
