--- a/mission.html
+++ b/mission.html
@@ -25,20 +25,26 @@
 
       </div>
 
-      <h1 id = "title">
-        Mission
-      <div id="prevention">
-        <img src="https://img.icons8.com/wired/64/000000/faq.png">
-        <h2>FAQ</h2>
-      </h1>
-
-    </div>
-
-    <div id="slogan">
-      <b id="statement">
-        We are four students from different universities who want to keep the public informed about COVID-19, how it spreads, and its prevention. <br>We hope this website can make the Coronavirus a more accessible topic so that individuals can stay informed and safe.</br>
-      </b>
-    </div>
+      <section id="aboutus">
+        <div class="container">
+          <div class="row">
+              <div class="col-sm-7">
+                  <h2 class = "text-center">About us</h2>
+                  <div class="col-sm-5">
+                    <div class="img-wrap">
+                      <img src="IMG_20200307_155824.jpg" alt="Paris" class="center">
+                    </div>
+                </div>
+                  <p>With a new global health concern everyear, everyone is almost always misinformed about what's out there or what is to come. This year with the sudden news of the
+                     Coronavirus, our goal is to provide true and honest information that anyone can access without the bias of over saturated crazy stories people
+                     hear over the internet or from others. With our diverse college collective composing of so many vast Universities, it's easy to get caught up with the constant
+                     rumors of the fast spread of Coronavirus that could even be on campus.
+                  <p>We're here to let you know actually what you need to know, what you should do to prepare, and finally to spread the awareness of the safe practices everyone should
+                      do to prevent themsleves and others of potential infection.
+                  </p>
+              </div>
+          </div>
+    </section>
 
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
