--- a/shop.html
+++ b/shop.html
@@ -27,8 +27,10 @@
         <img src = "coronavirus hero.jpg" height="300" width="1300">
         <div class="centered">Shops</div>
       </div>
-      <h1 id = "slogan">
-        Protect yourself from Coronavirus
+      <div id="prevention">
+        <img src="https://img.icons8.com/wired/64/000000/shopping-basket.png">
+        <h2>Prevention</h2>
+
       </h1>
     </div>
     <div class = "picture1">
