Added_full_background

--- a/index.html
+++ b/index.html
@@ -1,45 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Homepage</title>
-<link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
-  <div class="fcpage">
+  <head>
+    <title>Homepage</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  </head>
 
-    <div class="fcheader">
-
-      <div class="fcbuttons">
-
-        <div class="nav">
-
-          <button class="button" id="home"><a href="index.html" style="text-decoration: none; color: white">Home</a></button>
-          <button class="button" id="mission"><a href="mission.html" style="text-decoration: none; color: white">Mission</a></button>
-          <button class="button" id="info"><a href="info.html" style="text-decoration: none; color: white">Info</a></button>
-          <button class="button" id="map"><a href="map.html" style="text-decoration: none; color: white">Map</a></button>
-          <button class="button" id="shop"><a href="shop.html" style="text-decoration: none; color: white">Shop</a></button>
-          <button class="button" id="forum"><a href="forum.html" style="text-decoration: none; color: white">Forum</a></button>
-          <button class="button" id="faq"><a href="faq.html" style="text-decoration: none; color: white">FAQs</a></button>
-
+  <body>
+    <div class="fcpage">
+      <div class="fcheader">
+        <div class="fcbuttons">
+          <div class="nav">
+            <button class="button" id="home">
+              <a href="index.html" style="text-decoration: none; color: white"
+                >Home</a
+              >
+            </button>
+            <button class="button" id="mission">
+              <a href="mission.html" style="text-decoration: none; color: white"
+                >Mission</a
+              >
+            </button>
+            <button class="button" id="info">
+              <a href="info.html" style="text-decoration: none; color: white"
+                >Info</a
+              >
+            </button>
+            <button class="button" id="map">
+              <a href="map.html" style="text-decoration: none; color: white"
+                >Map</a
+              >
+            </button>
+            <button class="button" id="shop">
+              <a href="shop.html" style="text-decoration: none; color: white"
+                >Shop</a
+              >
+            </button>
+            <button class="button" id="forum">
+              <a href="forum.html" style="text-decoration: none; color: white"
+                >Forum</a
+              >
+            </button>
+            <button class="button" id="faq">
+              <a href="faq.html" style="text-decoration: none; color: white"
+                >FAQs</a
+              >
+            </button>
+          </div>
         </div>
-
+        <dev class="fancyWords">
+          <div class="top-left">How are you reacting to COVID-19?</div>
+        </dev>
       </div>
 
+      <div id="slogan">
+        <h1>
+          A website to inform the general public about the Coronavirus.
+        </h1>
+      </div>
+
+      <div class="fcfooter">
+        <p class="fcfooter" id="footer">
+          Website created for AthenaHacks2020.
+        </p>
+      </div>
     </div>
-
-    <div id="slogan">
-      <h1>
-        A website to inform the general public about the Coronavirus.
-      </h1>
-    </div>
-
-    <div class="fcfooter">
-      <p class="fcfooter" id="footer">
-        Website created for AthenaHacks2020.
-      </p>
-    </div>
-  </div>
-
-
-</body>
+  </body>
 </html>
