--- a/index.html
+++ b/index.html
@@ -48,13 +48,17 @@
           </div>
         </div>
         <dev class="fancyWords">
-          <div class="top-left">How are you reacting to COVID-19?</div>
+          <div class="top-left">
+            How are you reacting to COVID-19?
+            <br />
+            Are you taking any precautions to protect your loved ones?
+          </div>
         </dev>
       </div>
 
       <div id="slogan">
         <h1>
-          A website to inform the general public about the Coronavirus.
+          Informing the general public about the Coronavirus.
         </h1>
       </div>
 
