--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
       </div>
       <div class = "picture">
         <img src = "coronavirus hero.jpg" height="300" width="1300">
-        <div class="centered">Shops</div>
+        <div class="centered">Shop</div>
       </div>
       <div id="prevention">
         <img src="https://img.icons8.com/wired/64/000000/shopping-basket.png">
@@ -38,7 +38,7 @@
       <img src = "Brandzig Sterile Alcohol Prep Pads (300-Pack)  Thick 2-Ply AntisepticSanitizing Isopropyl Medical Wipes.png" height="300" width="400" vspace="20"></a>
       <div class="overlay">Brandzig Sterile Alcohol Prep Pads (300-Pack)  Thick 2-Ply AntisepticSanitizing Isopropyl Medical Wipes</div>
     </div>
-    <div class = "picture2">  
+    <div class = "picture2">
       <a href="https://www.amazon.com/FaceMasks-Protective-Dustproof-Pollen-Outdoor/dp/B084CT7FD4/ref=sr_1_13?crid=108TH6ZU6PKBP&keywords=n95+mask&qid=1583623284&sprefix=n95%2Caps%2C204&sr=8-13">
       <img src = "FaceMasks 50Pcs.png" height="300" width="400" vspace="20"></a>
       <div class="overlay">FaceMasks (50-Pack)</div>
@@ -60,9 +60,9 @@
     </div>
 
     <div id="slogan">
-    
+
     </div>
-    
+
     <div class="fcfooter">
       <p class="fcfooter" id="footer">
         Website created for AthenaHacks2020.
