--- a/index.html
+++ b/index.html
@@ -47,20 +47,19 @@
             </button>
           </div>
         </div>
-        <dev class="fancyWords">
-          <div class="top-left">
-            How are you reacting to COVID-19?
-            <br />
-            Are you taking any precautions to protect your loved ones?
-          </div>
-        </dev>
       </div>
 
       <div id="slogan">
         <h1>
           Informing the general public about the Coronavirus.
-        </h1>
+
       </div>
+      <div class= "words">
+    </h1>
+    How are you reacting to COVID-19?
+    <br>
+    Are you taking any precautions to protect your loved ones?
+  </div>
 
       <div class="fcfooter">
         <p class="fcfooter" id="footer">
