mission css updated

--- a/mission.html
+++ b/mission.html
@@ -29,21 +29,18 @@
                 </div>
                 <div id="prevention">
                   <img src="https://img.icons8.com/wired/64/000000/crowd.png">
-<<<<<<< HEAD
 
-
-=======
 
                 </div>
 
->>>>>>> 41eb873402f38a2e1d4727b808a59909ff24a4e7
+
                   <div class="col-sm-5">
                     <div class="img-wrap">
                       <img src="IMG_20200307_155824.jpg" alt="Paris" class="center">
                     </div>
                 </div>
-            <div id="hi">
-                <button onclick="typeWriter()">Click me</button>
+            <div id="hicontainer">
+                <button id = "hi" onclick="typeWriter()">Click me</button>
 
               <p id="demo"></p>
 
@@ -76,13 +73,7 @@
               </div>
           </div>
     </section>
-<<<<<<< HEAD
 
-
-=======
-
-
->>>>>>> 41eb873402f38a2e1d4727b808a59909ff24a4e7
 
 <div class="fcfooter">
       <p class="fcfooter" id="footer">
