--- a/faq.html
+++ b/faq.html
@@ -74,9 +74,7 @@ The most effective ways to protect yourself and others against COVID-19 are to f
 
     <div class="no">
       <span>Is there anything I SHOULDN'T do?</span>
-        <div class="no-content">
-Smoke, wear multiple masks, and self medicate, such as taking antibiotics.
-          </div>
+        <div class="no-content">Smoke, wear multiple masks, and self medicate, such as taking antibiotics.</div>
     </div>
 
     <div class="fcfooter">
